# cub3d

./: .gitignore  CMakeLists.txt  Makefile  cub3d  cub3d.c  cub3d.h  cub3d.h.gch  map.cub
config/: arg_parser.c  check_utils.c  config.c  first_map_check.c  init_identifier.c  init_identifier_fc.c  init_identifier_r.c  init_identifier_texture.c  init_map.c  map_check.c  map_check_dfs.c
core/: draw_floor_ceiling.c  draw_texture.c  draw_wall.c  hook_event.c  init_sprite.c  move.c  ray.c  screenshot.c  sprite.c  sprite_utils.c  texture.c
example/: Makefile  exam01.c  raycaster_flat.cpp  raycaster_textured.cpp
gnl/: get_next_line.c  get_next_line_utils.c
memory/: exit_free.c  exit_malloc.c
mlx/: mlx_new_window.m
textures/: test.xpm
utils/: digit_in_str.c  free_2d_malloc.c  ft_atoi.c  ft_bzero.c  ft_isdigit.c  ft_split.c  ft_strcmp.c  ft_strlcpy.c  is_map.c  set_xy.c
